upgrading-api-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hello-route
spec:
  parentRefs:
  - name: hello-gateway
  rules:
  - backendRefs:
    - name: hello-world
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /admin
    backendRefs:
    - name: hello-admin
      port: 80
